// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`JudgementDisplay > Responsive Layout > renders correctly on 375px mobile viewport (snapshot test) 1`] = `
<div
  style="min-height: 100vh; display: flex; flex-direction: column; justify-content: center; align-items: center; background-color: rgb(0, 0, 0); padding: 16px; box-sizing: border-box;"
>
  <style>
    
        @keyframes spin {
          to {
            transform: rotate(360deg);
          }
        }
      
  </style>
  <div
    data-testid="judgement-box"
    style="background-color: rgb(255, 255, 255); color: rgb(0, 0, 0); padding: 24px; border-radius: 8px; text-align: center; width: 90vw; max-width: 500px; min-height: 200px; display: flex; flex-direction: column; justify-content: center; align-items: center; word-wrap: break-word; overflow-wrap: break-word; font-size: 16px; line-height: 1.5; font-family: system-ui, sans-serif; box-sizing: border-box; gap: 16px;"
  >
    <p
      style="margin: 0px; white-space: pre-wrap;"
    >
      You've got great taste!
    </p>
  </div>
  <div
    style="display: flex; flex-direction: column; gap: 12px; width: 100%; margin-top: 16px;"
  >
    <button
      data-testid="new-session-button"
      style="padding: 12px 24px; margin-top: 16px; font-size: 14px; font-weight: 500; border-radius: 4px; cursor: pointer; transition: background-color 0.2s; min-width: 120px; background-color: rgb(0, 0, 0); color: rgb(255, 255, 255);"
    >
      Start New Session
    </button>
  </div>
</div>
`;

exports[`JudgementDisplay > Responsive Layout > renders correctly on desktop viewport (snapshot test) 1`] = `
<div
  style="min-height: 100vh; display: flex; flex-direction: column; justify-content: center; align-items: center; background-color: rgb(0, 0, 0); padding: 16px; box-sizing: border-box;"
>
  <style>
    
        @keyframes spin {
          to {
            transform: rotate(360deg);
          }
        }
      
  </style>
  <div
    data-testid="judgement-box"
    style="background-color: rgb(255, 255, 255); color: rgb(0, 0, 0); padding: 24px; border-radius: 8px; text-align: center; width: 90vw; max-width: 500px; min-height: 200px; display: flex; flex-direction: column; justify-content: center; align-items: center; word-wrap: break-word; overflow-wrap: break-word; font-size: 16px; line-height: 1.5; font-family: system-ui, sans-serif; box-sizing: border-box; gap: 16px;"
  >
    <p
      style="margin: 0px; white-space: pre-wrap;"
    >
      You've got great taste! This is a longer judgement that should wrap nicely on both mobile and desktop screens without any horizontal scrolling issues.
    </p>
  </div>
  <div
    style="display: flex; flex-direction: column; gap: 12px; width: 100%; margin-top: 16px;"
  >
    <button
      data-testid="new-session-button"
      style="padding: 12px 24px; margin-top: 16px; font-size: 14px; font-weight: 500; border-radius: 4px; cursor: pointer; transition: background-color 0.2s; min-width: 120px; background-color: rgb(0, 0, 0); color: rgb(255, 255, 255);"
    >
      Start New Session
    </button>
  </div>
</div>
`;
